# ChangeLog for dev-db/postgis
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-db/postgis/ChangeLog,v 1.74 2013/02/04 14:55:54 titanofold Exp $

  04 Feb 2013; Aaron W. Swenson <titanofold@gentoo.org>
  postgis-2.0.2-r1.ebuild, +files/postgis-2.0-pkgconfig-json.patch:
  Really fix bug 454774.

*postgis-2.0.2-r1 (03 Feb 2013)

  03 Feb 2013; Aaron W. Swenson <titanofold@gentoo.org> -postgis-2.0.2.ebuild,
  +postgis-2.0.2-r1.ebuild:
  Add JSON-C dependency and use pkg-config fixing bug 454774.

*postgis-2.0.2 (30 Jan 2013)
*postgis-1.5.8 (30 Jan 2013)
*postgis-1.4.2-r2 (30 Jan 2013)
*postgis-1.3.6-r2 (30 Jan 2013)

  30 Jan 2013; Aaron W. Swenson <titanofold@gentoo.org>
  +postgis-1.3.6-r2.ebuild, +postgis-1.4.2-r2.ebuild, +postgis-1.5.8.ebuild,
  +files/postgis-1.5-ldflags.patch, +postgis-2.0.2.ebuild,
  +files/postgis-2.0-ldflags.patch:
  Version bumps. Fixes bugs 339116, 423349, and 454276.

*postgis-1.5.5 (01 Nov 2012)

  01 Nov 2012; Patrick Lauer <patrick@gentoo.org> +postgis-1.5.5.ebuild:
  Bump

  20 Aug 2012; Christoph Junghans <ottxor@gentoo.org> postgis-2.0.1.ebuild:
  added prefix keywords

  11 Aug 2012; Markus Meier <maekke@gentoo.org> postgis-2.0.0.ebuild:
  x86 stable, bug #420125

*postgis-2.0.1 (25 Jul 2012)

  25 Jul 2012; Aaron W. Swenson <titanofold@gentoo.org> +postgis-2.0.1.ebuild:
  Version bump. Fixes bug 425822

  03 Jul 2012; Brent Baude <ranger@gentoo.org> postgis-2.0.0.ebuild:
  Marking postgis-2.0.0 ppc for bug 420125

  12 Jun 2012; Agostino Sarubbo <ago@gentoo.org> postgis-2.0.0.ebuild:
  Stable for amd64, wrt bug #420125

  04 Jun 2012; Zac Medico <zmedico@gentoo.org> postgis-1.3.6-r1.ebuild:
  inherit multilib for get_libdir

  10 Apr 2012; Aaron W. Swenson <titanofold@gentoo.org> postgis-2.0.0.ebuild:
  Fixed dependencies. Fixes bug 411277.

*postgis-2.0.0 (04 Apr 2012)

  04 Apr 2012; Patrick Lauer <patrick@gentoo.org> +postgis-2.0.0.ebuild:
  Bump
