@@ -23,13 +23,13 @@ EBUILD postgis-1.5.5.ebuild 6913 SHA256 49fa5186e567d8e857ee5088055d2380a3a72b6a
 EBUILD postgis-1.5.8.ebuild 6674 SHA256 38555180bb2e4921d6fa19c12aee36d1e016c601c35350e6c43b68b0a2da95ed SHA512 15a4533460d2ab46cbda115ebe1d607939a8014f3f7a7a726fd1138bc0261f03f3a6366737a120590d2d776fa13832377acb79351c739c875e38ce5bce7a4881 WHIRLPOOL d753889eb5384d0a3c4473223d0cba6c17b3be9a2e2b75a4557ebae3ff81ceff12ca0582053d116401f15924d37d7b29c9c78fe4514c88137becbc3746fe8669
 EBUILD postgis-2.0.0.ebuild 6901 SHA256 94fddc0709cad9a31370308593318277697d6f88cda576625db57547661c37d9 SHA512 f3985bbd13e2faba0e2c9e8ebcdcbae48b9ffc67c2b5ea965cd66e33f7f9f620217cf029ea487756eb5a45fab5ddd40297b7127c1354c7beb89ae4aa3e1a5708 WHIRLPOOL 6de8c7fbb55e17541d3d86b6bdb475cc28677cf517d286e1f8b392caa2fc0643b695ee4466533ff0f5354e1cce77c2482e7dd16915b45fb37f9134bc0caa78ed
 EBUILD postgis-2.0.1.ebuild 6960 SHA256 c2d3875e8c482790d4e7d603048e600863e2cc00faf94f3db365e73038525ecb SHA512 dc45b7fe13883f4c2706c45c3156d4964f4cb09041e8ace5de89adaea4b37ef2ddaf98fa22155ddb6c07bc9a840f32c9088d650952974a9e7c055d6c0e246947 WHIRLPOOL 5870ca61c8cc9872b6bdc917d943e0738356aa3d7947567b6e50f27dc90dcb390d53546c5b14ccf51e94ef8b852481c38343177ab672ae409f4f36c145f2c3c9
-EBUILD postgis-2.0.2-r1.ebuild 7026 SHA256 0a39ebeacc083effe0657ec8cab88c4b9f2284d3632d7b7ae4ef0e62f7d18619 SHA512 beb90b4bee4396559ec59cc17e9571441fab619eac290a072177103f5c4d015a065d2d074f9efe7cb2ed290446cd3e3a194c792dcb7409008db1093c9471b93d WHIRLPOOL 5f1dafe619ee856fc885a3394ab2ef2326c5aa17975ead0f6a7da5bfb8935d869ed69fa49b6790082d9cdb763703841f0015c658b9b17869bdd48fd9404df9bb
-MISC ChangeLog 10613 SHA256 abb99642a91c4f9f858d42fb2a6792640ff42e1d4de1edae271511b4edc04d6a SHA512 5d7e07092980ea3d45093ddf4ddb78ac3dc652139d671d7e02858b8ac4603eed747362eaeaf94faafad131dcf07e34559b0aaee52120373becabd4b2a560d7b5 WHIRLPOOL fd13013ed4fb6b91ec3c6d5be6126f67f9bdd398c07435c27a4305ff3be21280e212f0f3be821051f5d2fe84ff865efadfc515e722d7b00d1966773c6f258565
+EBUILD postgis-2.0.2-r1.ebuild 7186 SHA256 f41efa5b22cf8038bd038548a0ff1742ca10a81a12f3547da2b6b69b3714f66b SHA512 38a5b4dd5014650ed81146ca699425360fc15df475f35ddb8330a80177f3d22c8b82a80d7592509235b8693c414c245b517609cc6b3acffbb722726831278778 WHIRLPOOL ab0db21c8f7fe854512979712618b5d8cbe6bb7fef72cc074b02e593a8c7034671fe13491d1a75f0ded57f79cd47a8092d64e54e1356745007e574a785d438e0
+MISC ChangeLog 10750 SHA256 b4e5c4045e6dd566b1ec70ad6c799527d08d092204ca08a80a60abd9de863cdd SHA512 a1feeed1582b7eeb63b6d8ad293918812ac3c008e8cb29509c342bbedda302de757292b0860c3369e946adcf1c1096e5c8b7170d0a19ead68ab3004faae4e93a WHIRLPOOL 3ae3eb556a85bbb17cda2059605c7f0a4cf1d52af901ae72f010e242d15dc242eabf5af7c48daa3f7474c57ec4f3187206d56572d04996c56374e5c5e1e1f4bd
 MISC metadata.xml 481 SHA256 d0ab8dbe26001259f36c968e1d48ad5fda768227d99319cf4302af804a08d5ef SHA512 5299745d72d13ccc71d5f6eee5d343268a59f57ac208621c81643e7f2160b66382c3dd0bf07c97f4cefaebfbbbfc5e11e6b84318f5fc536877f123be2fd7743e WHIRLPOOL 257b7f00ffcd56df202c0e1cd75383bf7ed9b0c854cadb9371a281bbd200b8686c70d3d28cadd06756510f9d6536ee64c636a12f5170ce5c608e82d1148ba9fe
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iF4EAREIAAYFAlEPyQkACgkQVxOqA9G7/aAExgD9FSOwmokCpK56JR3RgLi+mHpl
-8GBL4u0iJIpBh8/A97oA/jeo0vdueGUeRdV3xYb6KXVwEfPOuIl3h7Y5YRT8OvOf
-=gWmV
+iF4EAREIAAYFAlERxZAACgkQVxOqA9G7/aCR6QD/at/RMAqm6Jgkixy8MFtQiojk
+y8vhUMH4pk/+fIoQKFsA/06xQwRQq/dL8OKjO4ZNLhCws7hX+h2YImKvpzCfefvG
+=KW/S
 -----END PGP SIGNATURE-----
