@@ -1,6 +1,10 @@
 # ChangeLog for dev-db/postgis
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-db/postgis/ChangeLog,v 1.74 2013/02/04 14:55:54 titanofold Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-db/postgis/ChangeLog,v 1.75 2013/02/06 02:52:58 titanofold Exp $
+
+  06 Feb 2013; Aaron W. Swenson <titanofold@gentoo.org>
+  postgis-2.0.2-r1.ebuild:
+  Fix recursive make errors by adding MAKEOPTS="-j1"
 
   04 Feb 2013; Aaron W. Swenson <titanofold@gentoo.org>
   postgis-2.0.2-r1.ebuild, +files/postgis-2.0-pkgconfig-json.patch:
